// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select.Basic does not filter when filterOption value is false 1`] = `
<div
  class="rc-select-dropdown rc-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div
      id="test-id_list"
      role="listbox"
      style="height: 0px; width: 0px; overflow: hidden;"
    >
      <div
        aria-label="1"
        aria-selected="false"
        id="test-id_list_0"
        role="option"
      >
        1
      </div>
      <div
        aria-label="2"
        aria-selected="false"
        id="test-id_list_1"
        role="option"
      >
        2
      </div>
    </div>
    <div
      class="rc-virtual-list"
      style="position: relative;"
    >
      <div
        class="rc-virtual-list-holder"
        style="max-height: 200px; overflow-y: auto;"
      >
        <div>
          <div
            class="rc-virtual-list-holder-inner"
            style="display: flex; flex-direction: column;"
          >
            <div
              aria-disabled="false"
              class="rc-select-item rc-select-item-option rc-select-item-option-active"
              title="1"
            >
              <div
                class="rc-select-item-option-content"
              >
                1
              </div>
              <span
                aria-hidden="true"
                class="rc-select-item-option-state"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="rc-select-item-option-state-icon"
                />
              </span>
            </div>
            <div
              aria-disabled="false"
              class="rc-select-item rc-select-item-option"
              title="2"
            >
              <div
                class="rc-select-item-option-content"
              >
                2
              </div>
              <span
                aria-hidden="true"
                class="rc-select-item-option-state"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="rc-select-item-option-state-icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic filterOption could be true as described in default value 1`] = `
<div
  class="rc-select-dropdown rc-select-dropdown-empty rc-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div
      class="rc-select-item-empty"
      id="test-id_list"
      role="listbox"
    >
      Not Found
    </div>
  </div>
</div>
`;

exports[`Select.Basic render renders aria-attributes correctly 1`] = `
<div
  class="antd select-test antd-single antd-allow-clear antd-show-search"
>
  <div
    class="antd-content antd-content-has-value"
    title="2"
  >
    2
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-label="some-label"
      aria-labelledby="test-id"
      autocomplete="off"
      class="antd-input"
      id="test-id"
      role="combobox"
      type="search"
      value=""
    />
  </div>
  <div
    class="antd-clear"
  >
    ×
  </div>
</div>
`;

exports[`Select.Basic render renders correctly 1`] = `
<div
  class="antd select-test antd-single antd-allow-clear antd-show-search"
>
  <div
    class="antd-content antd-content-has-value"
    title="2"
  >
    2
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="antd-input"
      id="test-id"
      role="combobox"
      type="search"
      value=""
    />
  </div>
  <div
    class="antd-clear"
  >
    ×
  </div>
</div>
`;

exports[`Select.Basic render renders data-attributes correctly 1`] = `
<div
  class="antd select-test antd-single antd-allow-clear antd-show-search"
  data-id="12345"
  data-test="test-id"
>
  <div
    class="antd-content antd-content-has-value"
    title="2"
  >
    2
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="antd-input"
      id="test-id"
      role="combobox"
      type="search"
      value=""
    />
  </div>
  <div
    class="antd-clear"
  >
    ×
  </div>
</div>
`;

exports[`Select.Basic render renders disabled select correctly 1`] = `
<div
  class="antd select-test antd-single antd-disabled antd-show-search"
>
  <div
    class="antd-content antd-content-has-value"
    title="2"
  >
    2
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="antd-input"
      disabled=""
      id="test-id"
      role="combobox"
      type="search"
      value=""
    />
  </div>
</div>
`;

exports[`Select.Basic render renders dropdown correctly 1`] = `null`;

exports[`Select.Basic render renders role prop correctly 1`] = `
<div
  class="antd select-test antd-single antd-allow-clear antd-show-search"
>
  <div
    class="antd-content antd-content-has-value"
    title="2"
  >
    2
    <input
      aria-autocomplete="list"
      aria-expanded="false"
      aria-haspopup="listbox"
      autocomplete="off"
      class="antd-input"
      id="test-id"
      role="button"
      type="search"
      value=""
    />
  </div>
  <div
    class="antd-clear"
  >
    ×
  </div>
</div>
`;

exports[`Select.Basic render should support fieldName 1`] = `
<div
  class="rc-virtual-list"
  style="position: relative;"
>
  <div
    class="rc-virtual-list-holder"
    style="max-height: 200px; overflow-y: auto;"
  >
    <div>
      <div
        class="rc-virtual-list-holder-inner"
        style="display: flex; flex-direction: column;"
      >
        <div
          class="rc-select-item rc-select-item-group"
          title="groupLabel"
        >
          groupLabel
        </div>
        <div
          aria-disabled="false"
          class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active"
          title="label"
        >
          <div
            class="rc-select-item-option-content"
          >
            label
          </div>
          <span
            aria-hidden="true"
            class="rc-select-item-option-state"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-item-option-state-icon"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic render should support fieldName 2`] = `
<div
  class="rc-virtual-list"
  style="position: relative;"
>
  <div
    class="rc-virtual-list-holder"
    style="max-height: 200px; overflow-y: auto;"
  >
    <div>
      <div
        class="rc-virtual-list-holder-inner"
        style="display: flex; flex-direction: column;"
      >
        <div
          class="rc-select-item rc-select-item-group"
          title="groupLabel"
        >
          groupLabel
        </div>
        <div
          aria-disabled="false"
          class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active"
          title="label"
        >
          <div
            class="rc-select-item-option-content"
          >
            label
          </div>
          <span
            aria-hidden="true"
            class="rc-select-item-option-state"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-item-option-state-icon"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic render should support fieldName 3`] = `
<div
  class="rc-virtual-list"
  style="position: relative;"
>
  <div
    class="rc-virtual-list-holder"
    style="max-height: 200px; overflow-y: auto;"
  >
    <div>
      <div
        class="rc-virtual-list-holder-inner"
        style="display: flex; flex-direction: column;"
      >
        <div
          class="rc-select-item rc-select-item-group"
          title="groupLabel"
        >
          groupLabel
        </div>
        <div
          aria-disabled="false"
          class="rc-select-item rc-select-item-option rc-select-item-option-grouped rc-select-item-option-active"
          title="label"
        >
          <div
            class="rc-select-item-option-content"
          >
            label
          </div>
          <span
            aria-hidden="true"
            class="rc-select-item-option-state"
            style="user-select: none;"
            unselectable="on"
          >
            <span
              class="rc-select-item-option-state-icon"
            />
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic should contain falsy children 1`] = `
<div
  class="rc-select-dropdown rc-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div
      id="test-id_list"
      role="listbox"
      style="height: 0px; width: 0px; overflow: hidden;"
    >
      <div
        aria-label="1"
        aria-selected="true"
        id="test-id_list_0"
        role="option"
      >
        1
      </div>
      <div
        aria-label="2"
        aria-selected="false"
        id="test-id_list_1"
        role="option"
      >
        2
      </div>
    </div>
    <div
      class="rc-virtual-list"
      style="position: relative;"
    >
      <div
        class="rc-virtual-list-holder"
        style="max-height: 200px; overflow-y: auto;"
      >
        <div>
          <div
            class="rc-virtual-list-holder-inner"
            style="display: flex; flex-direction: column;"
          >
            <div
              aria-disabled="false"
              class="rc-select-item rc-select-item-option rc-select-item-option-active rc-select-item-option-selected"
              title="1"
            >
              <div
                class="rc-select-item-option-content"
              >
                1
              </div>
              <span
                aria-hidden="true"
                class="rc-select-item-option-state"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="rc-select-item-option-state-icon"
                >
                  ✓
                </span>
              </span>
            </div>
            <div
              aria-disabled="false"
              class="rc-select-item rc-select-item-option"
              title="2"
            >
              <div
                class="rc-select-item-option-content"
              >
                2
              </div>
              <span
                aria-hidden="true"
                class="rc-select-item-option-state"
                style="user-select: none;"
                unselectable="on"
              >
                <span
                  class="rc-select-item-option-state-icon"
                />
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select.Basic should render custom dropdown correctly 1`] = `
<div
  class="rc-select-dropdown rc-select-dropdown-placement-bottomLeft"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; box-sizing: border-box;"
>
  <div>
    <div>
      <div
        class="dropdown-custom-node"
      >
        CUSTOM NODE
      </div>
      <div
        id="test-id_list"
        role="listbox"
        style="height: 0px; width: 0px; overflow: hidden;"
      >
        <div
          aria-label="1"
          aria-selected="false"
          id="test-id_list_0"
          role="option"
        >
          1
        </div>
        <div
          aria-label="2"
          aria-selected="false"
          id="test-id_list_1"
          role="option"
        >
          2
        </div>
      </div>
      <div
        class="rc-virtual-list"
        style="position: relative;"
      >
        <div
          class="rc-virtual-list-holder"
          style="max-height: 200px; overflow-y: auto;"
        >
          <div>
            <div
              class="rc-virtual-list-holder-inner"
              style="display: flex; flex-direction: column;"
            >
              <div
                aria-disabled="false"
                class="rc-select-item rc-select-item-option rc-select-item-option-active"
                title="1"
              >
                <div
                  class="rc-select-item-option-content"
                >
                  1
                </div>
                <span
                  aria-hidden="true"
                  class="rc-select-item-option-state"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    class="rc-select-item-option-state-icon"
                  />
                </span>
              </div>
              <div
                aria-disabled="false"
                class="rc-select-item rc-select-item-option"
                title="2"
              >
                <div
                  class="rc-select-item-option-content"
                >
                  2
                </div>
                <span
                  aria-hidden="true"
                  class="rc-select-item-option-state"
                  style="user-select: none;"
                  unselectable="on"
                >
                  <span
                    class="rc-select-item-option-state-icon"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
